--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ cmake_minimum_required (VERSION 3.2)
 # SET(CMAKE_USE_RELATIVE_PATHS ON)
 
 # set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Profile" CACHE STRING "" FORCE) 
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE) 
+# set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE) 
 
 set (BEHAVIAC_PACKAGE_VERSION 3.6.39)
 
