--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ INCLUDE(cmake/ModuleImport.cmake)
 INCLUDE(cmake/ModuleCompileOptions.cmake)
 ModuleSetCompileOptions()
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/build)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 message( STATUS "MSVC=${MSVC}" )
 
 # if (MSVC)
@@ -343,7 +343,7 @@ endif()
 # MESSAGE( STATUS "CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}" )
 
 configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/build/_config.h.in"
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/_config.h.in"
   "${CMAKE_CURRENT_SOURCE_DIR}/inc/behaviac/common/_config.h"
   NEWLINE_STYLE WIN32
   )
