--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,37 +431,37 @@ else()
 	message( STATUS "build static libs" )
 endif()
 
-if (NOT BEHAVIAC_ANDROID_STUDIO)
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btunittest")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btremotetest")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/demo_running")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/usertest")
+if (PROJECT_IS_TOP_LEVEL AND NOT BEHAVIAC_ANDROID_STUDIO)
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btunittest")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btremotetest")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/demo_running")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/usertest")
 
-	if (MSVC)
-		add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btperformance")
-	    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/example/spaceship")
-	        add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/example/spaceship")
-	    endif()
+if (MSVC)
+	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test/btperformance")
+	if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/example/spaceship")
+		add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/example/spaceship")
 	endif()
+endif()
 
-	#add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/example/airbattledemo")
+#add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/example/airbattledemo")
 
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1_1/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1_2/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_2/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_3/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_4/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_5/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_6/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_7/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_8/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_9/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_10/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_11/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_12/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_13/cpp")
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_14/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1_1/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_1_2/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_2/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_3/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_4/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_5/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_6/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_7/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_8/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_9/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_10/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_11/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_12/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_13/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_14/cpp")
 else()
-	add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_11/cpp")
+add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/tutorials/tutorial_11/cpp")
 endif()
