--- a/test/werewolf-game/CMakeLists.txt
+++ b/test/werewolf-game/CMakeLists.txt
@@ -6,6 +6,7 @@ file(GLOB_RECURSE BTUNITTEST_INC  "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
 include_directories("${PROJECT_SOURCE_DIR}/inc")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/timer")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # set(BTUNITTEST_SRC_INC ${BTUNITTEST_SRC} ${BTUNITTEST_INC})
